cambios en el home

--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
             <a href="http://www.medicavial.com.mx" target="_blank">MedicaVial <span class="menu-icon">MV</span></a>
           </li>
           <li class="sidebar-list">
-            <a href="#" target="_blank">Reportes Estadisticos <span class="menu-icon fa fa-bar-chart-o"></span></a>
+            <a href="http://www.amis.com.mx/amis/index.html" target="_blank">AMIS <span class="menu-icon fa fa-bar-chart-o"></span></a>
           </li>
         </ul>
         <div class="sidebar-footer">
-            <div class="col-xs-4">
+            <!-- <div class="col-xs-4">
               <a href="https://github.com/Ehesp/Responsive-Dashboard" target="_blank">
                 Github
               </a>
-            </div>
-            <div class="col-xs-4">
+            </div> -->
+            <div class="col-xs-6">
               <a href="#" target="_blank">
-                About
+                Acerca de..
               </a>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-6">
               <a href="#">
-                Support
+                Soporte
               </a>
             </div>
         </div>
