--- a/index.html
+++ b/index.html
@@ -161,12 +161,14 @@
     </div><!-- End Page Wrapper -->
 
     <script src="lib/jquery.min.js"></script>
+    <script src="modules/angular-file-upload-shim.min.js" ></script> 
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="modules/ng-bootstrap-tpls.min.js"></script>
     <script src="modules/angular-animate.min.js"></script>
     <script src="modules/angular-cookies.min.js"></script>
     <script src="modules/angular-route.min.js"></script>
+    <script src="modules/angular-file-upload.min.js" ></script>
     <script src="app/app.js"></script>
     <script src="app/directives/cargando.js"></script>
     <script src="app/controllers/loginCtrl.js"></script>
